--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "background_color": "#ffffff",
     "theme_color": "#007bff",
     "icons": [{
-      "src": "icon.png",
+      "src": "logo.jpeg",
       "sizes": "192x192",
       "type": "image/png"
     }]
